--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
   <p><img src="./tyson.jpg" alt="Tyson and his son riding on his shoulders."></p>
 
-  <p><strong>Tyson Mote</strong> is a Principal Engineer at <a href="https://segment.com/">Segment</a>. He was born in Montana and he raised and <a href="https://eldoradocountyfair.org/livestock.html">sold pigs at the county fair</a> to buy his <a href="https://everymac.com/systems/apple/ibook/specs/ibook_se.html">first computer</a>, but he’s more of a city person these days. He lives in Portland, Oregon and has a wife and son that he likes very, very much.</p>
+  <p><strong>Tyson Mote</strong> is a Principal Engineer at <a href="https://segment.com/">Segment</a>. He was born in Montana and he raised and <a href="https://eldoradocountyfair.org/livestock.html">sold pigs at the county fair</a> to buy his <a href="https://everymac.com/systems/apple/ibook/specs/ibook_se.html">first computer</a>, but he’s more of a city person these days. He lives in Portland, Oregon and has a wife and son that he likes very&nbsp;much.</p>
 
   <p>He’d like to visit Iceland someday; it sounds nice.</p>
 
