Tidy up styles for mobile

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="description" content="Tyson is an software engineer in Portland, Oregon.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Tyson Mote</title>
 
@@ -13,7 +14,7 @@
     body {
       max-width: 30em;
       margin: 0 auto;
-      padding: 5em 0;
+      padding: 5em 2em;
       font-family: "Source Serif Pro", "Palatino", serif;
       color: #222;
     }
